Fix z-index setting so that all elements exist below the preloader

--- a/src/_homemarquee.scss
+++ b/src/_homemarquee.scss
@@ -53,7 +53,7 @@ $skew: -15deg;
 
   .grid-container {
     position: relative;
-    z-index: 100000;
+    z-index: 10000;
     padding-top: 4rem;
 
     .logo-grid {
